--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,19 +10,18 @@
   <![endif]-->
 
   <body>
+<div class="container-fluid">
 
-    {% include header.html %}
-
-   
-
-  <div class="container">
+    {% include header.html %} 
+ 
 
     {{ content }}
 
-  </div>
+  
 
-   
-
+    {% include my-footer.html %}
+    </div>
   </body>
+
 
 </html>
