--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,25 +3,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+      
+        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+        <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+       
+        <link rel="stylesheet" href="{{ "/bootstrap-3.3.4-dist/css/bootstrap.min.css" | prepend: site.baseurl }}">
+        <link rel="stylesheet" href="{{ "/css/my-css.css" | prepend: site.baseurl }}">
+        <script src="{{ "/bootstrap-3.3.4-dist/js/jquery-1.11.3.min.js" | prepend: site.baseurl }}"type="text/javascript"></script>
+        <script src="{{ "/bootstrap-3.3.4-dist/js/bootstrap.js" | prepend: site.baseurl }}"type="text/javascript"></script>
+        
+        
 
- 
-  <link rel="stylesheet" href="{{ "/bootstrap-3.3.4-dist/css/bootstrap.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/my-css.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+        <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+        <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   
-  
-  <style>
-    body {
-      padding-top: 60px;
-    }
-  </style>
-
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+	
+	<!--[if lt IE 10]>
+  <link rel="stylesheet" href="{{ "/css/ie.css" | prepend: site.baseurl }}">
+	<![endif]-->
 </head>
