added Rosa artists page. modified about page, added twitter link in footer.

--- a/_includes/my-footer.html
+++ b/_includes/my-footer.html
@@ -1,5 +1,11 @@
 <footer class="site-footer">
 <hr>
-
-<p>© Jasper Voss Projects 2015 </p>
+<div class="row">
+  <div class="col-md-6">
+    <p>© Jasper Voss Projects 2015 </p>
+    </div>
+  <div class="col-md-6 right">
+    <a href="https://twitter.com/_JasperVoss">twitter</a>
+  </div>
+</div>
 </footer>
