--- a/css/my-css.css
+++ b/css/my-css.css
@@ -120,19 +120,13 @@ hr {
     color: grey;
 }
 
-.carousel-inner .item {
-    overflow: hidden;
-    max-width: 100%;
-    max-height: 100%;
-}
 
-.carousel-inner .item img {
-    width: 100%;
-    min-height: 100%;
-    max-height: none;
-}
+
+max-width: none;
 
 .main-image{
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
+
