--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-6">
       <ul class="nav nav-pills">
-        <li role="presentation" {%if page.id == 'index'%} class="active"{%endif%}><a href="{{ "/index.html" | prepend: site.baseurl }}"><span class="logo"><span class="blurry-text">Jasper Voss </span>Projects</span></a></li>
+        <li role="presentation" {%if page.id == 'index'%} class="active"{%endif%}><a href="{{ "/index.html" | prepend: site.baseurl }}"><span class="logo"><span class="blurry-text">Jasper Voss </span><small>Projects</small></span></a></li>
         </ul>
     </div>
     <div class="col-md-5">
