--- a/css/my-css.css
+++ b/css/my-css.css
@@ -95,6 +95,7 @@ a:focus{
 .blurry-text {
    color: transparent;
    text-shadow: 0 0 3px rgba(0,0,0,0.5);
+   padding-right: 5px;
 }
 
 .blurry-text h4{
@@ -129,4 +130,6 @@ max-width: none;
   padding-bottom: 30px;
 }
 
-
+small {
+  font-size: 90%;
+}
